Improve FFMPEG plugin, use newer ProcessBuilder API